fix: fix modal width on small devices

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ hr {
 
 .modal > .header {
     position: relative;
-    width: 450px;
+    max-width: 450px;
     margin: auto;
     text-align: center;
     text-transform: uppercase;
@@ -205,7 +205,7 @@ hr {
 }
 
 .modal > .content {
-    width: 450px;
+    max-width: 450px;
     margin: auto;
 }
 
